--- a/index.html
+++ b/index.html
@@ -125,6 +125,19 @@
 
   <!-- main with jumbo and container -->
   <main>
+    <section class="jumbo">
+      <nav class="jumbo-navbar">
+        <ul>
+          <li>Experience Dropbox</li>
+          <li>Work with Fleibility</li>
+          <li>Grow your Business</li>
+          <li>Keep Work Secure</li>
+          <li>Resources</li>
+        </ul>
+      </nav>
+      <div class="column-70"></div>
+      <div class="column-30"></div>
+    </section>
     
   </main>
 
