working on jumbo

--- a/index.html
+++ b/index.html
@@ -135,8 +135,30 @@
           <li>Resources</li>
         </ul>
       </nav>
-      <div class="column-70"></div>
-      <div class="column-30"></div>
+      <article class="jumbo-article">
+        <div class="column column-60">
+          <img src="./img/jumbo-left.jpg" alt="tired worker">
+          <div class="left-jumbo">
+            <h1>The future of work is Flexible</h1>
+            <p>Distributed teams, diverse time-zones, and new ways of collaboration are  changing the way we work and calling for a more flexible future.</p>
+          </div>
+        </div>
+        <div class="column column-40">
+          <img src="./img/jumbo-right.jpeg" alt="interview">
+          <div class="jumbo-right">
+            <span>Work with Flexibility</span>
+            <h2>New tools for a new way of working</h2>            
+          </div>
+          <div class="jumbo-right">
+            <span>Work with Flexibility</span>
+            <h4>New tools for a new way of working</h4>            
+          </div>
+          <div class="jumbo-right">
+            <span>Work with Flexibility</span>
+            <h4>New tools for a new way of working</h4>            
+          </div>
+        </div>
+      </article>
     </section>
     
   </main>
