working on article

--- a/index.html
+++ b/index.html
@@ -160,6 +160,31 @@
         </div>
       </article>
     </section>
+    <!-- article -->
+    <article class="two-column-article">
+      <div class="img-wrapper">
+        <div class="image-container">
+          <img src="./img/profile.jpg" alt="user">
+        </div>
+        <div class="image-container">
+          <img src="./img/profile.jpg" alt="user">
+        </div>
+        <div class="image-container">
+          <img src="./img/profile.jpg" alt="user">
+        </div>
+        <div class="image-container">
+          <img src="./img/profile.jpg" alt="user">
+        </div>
+      </div>
+      <div class="article-container">
+        <div class="article">
+          <h2>The Drop In: Conversations about leading with flexibility</h2>
+          <p>In our four-part video series, created in partnership with Wired Brand Lab, award-winning podcast host and best-selling author Guy Raz connects with innovative entrepreneurs and explores how even in this new era of distributed work, they're managing to increase productivity, collaborate with their team, and evolve their business for the better</p>
+          <button class="btn">Watch videos</button>
+        </div>
+        <img src="./img/profile.jpg" alt="user">
+      </div>
+    </article>
     
   </main>
 
