--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <!-- css -->
   <link href="./style/style.css" rel="stylesheet">
   <!-- font -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Montserrat:wght@200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
     rel="stylesheet">
   <!-- icon -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
@@ -140,22 +140,23 @@
           <img src="./img/jumbo-left.jpg" alt="tired worker">
           <div class="left-jumbo">
             <h1>The future of work is Flexible</h1>
-            <p>Distributed teams, diverse time-zones, and new ways of collaboration are  changing the way we work and calling for a more flexible future.</p>
+            <p>Distributed teams, diverse time-zones, and new ways of collaboration are changing the way we work and
+              calling for a more flexible future.</p>
           </div>
         </div>
         <div class="column column-40">
           <img src="./img/jumbo-right.jpeg" alt="interview">
           <div class="jumbo-right">
             <span>Work with Flexibility</span>
-            <h2>New tools for a new way of working</h2>            
+            <h2>New tools for a new way of working</h2>
           </div>
           <div class="jumbo-right">
             <span>Work with Flexibility</span>
-            <h4>New tools for a new way of working</h4>            
+            <h4>New tools for a new way of working</h4>
           </div>
           <div class="jumbo-right">
             <span>Work with Flexibility</span>
-            <h4>New tools for a new way of working</h4>            
+            <h4>New tools for a new way of working</h4>
           </div>
         </div>
       </article>
@@ -179,13 +180,29 @@
       <div class="article-container">
         <div class="article">
           <h2>The Drop In: Conversations about leading with flexibility</h2>
-          <p>In our four-part video series, created in partnership with Wired Brand Lab, award-winning podcast host and best-selling author Guy Raz connects with innovative entrepreneurs and explores how even in this new era of distributed work, they're managing to increase productivity, collaborate with their team, and evolve their business for the better</p>
+          <p>In our four-part video series, created in partnership with Wired Brand Lab, award-winning podcast host and
+            best-selling author Guy Raz connects with innovative entrepreneurs and explores how even in this new era of
+            distributed work, they're managing to increase productivity, collaborate with their team, and evolve their
+            business for the better</p>
           <button class="btn">Watch videos</button>
         </div>
-        <img src="./img/profile.jpg" alt="user">
+        <img class="article-img" src="./img/profile.jpg" alt="user">
       </div>
     </article>
-    
+    <article class="two-column-article flex-reverse">
+      <div class="img-wrapper">
+          <img src="./img/profile.jpg" alt="user">
+      </div>
+      <div class="article-container">
+        <div class="article">
+          <h2>How to lead a team during a pandemic?</h2>
+          <p>Andy wilson, Director of Media, and Tifenn Dani Kwan, CMO, discuss the challenges businesses are currenly facing and how Dropbox is making a difference for its people and customers</p>
+          <button class="btn">Watch videos</button>
+        </div>
+        <img class="article-img-reverse" src="./img/profile.jpg" alt="user">
+      </div>
+    </article>
+
   </main>
 
   <!-- footer with referral links -->
