full-width section

--- a/index.html
+++ b/index.html
@@ -202,6 +202,20 @@
         <img class="article-img-reverse" src="./img/profile.jpg" alt="user">
       </div>
     </article>
+    <article class="full-width">
+      <img src="./img/full-width.jpg" alt="Saldatore">
+      <div class="on-screen">
+        <div class="video-title">
+          <div class="video-info">
+            <h2>How Tomorrow Lab invents products that matter</h2>
+            <span>2 min.</span>
+          </div>
+          <span class="video-btn">
+            <i class="fa-regular fa-circle-play"></i>
+          </span>
+        </div>
+      </div>
+    </article>
 
   </main>
 
