--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="header-left">
       <ul>
         <li><a href="#"><img id="logo" src="./img/logo-small.png" alt="Dropbox-logo"></a></li>
-        <li><a href="#">Perché Dropbox</a>
+        <li><a href="#">Why Dropbox?</a>
           <div class="sub-menu">
             <ul>
               <li><a href="#plan">Condividi file</a></li>
@@ -41,7 +41,7 @@
             </ul>
           </div>
         </li>
-        <li><a href="#">Funzioni</a>
+        <li><a href="#">Features</a>
           <div class="sub-menu">
             <ul>
               <li><a href="#plan">Condividi file</a></li>
@@ -59,7 +59,7 @@
             </ul>
           </div>
         </li>
-        <li><a href="#">Piani e Prezzi</a>
+        <li><a href="#">Plans & Pricing</a>
           <div class="sub-menu">
             <ul>
               <li><a href="#plan">Condividi file</a></li>
@@ -81,7 +81,7 @@
     </nav>
     <nav class="header-right">
       <ul>
-        <li><a href="#">Supporto</a>
+        <li><a href="#">Support</a>
           <div class="sub-menu">
             <ul>
               <li><a href="#plan">Condividi file</a></li>
@@ -99,7 +99,7 @@
             </ul>
           </div>
         </li>
-        <li><a href="#">Contatta l'ufficio vendite</a>
+        <li><a href="#">Contact</a>
           <div class="sub-menu">
             <ul>
               <li><a href="#plan">Condividi file</a></li>
@@ -117,8 +117,8 @@
             </ul>
           </div>
         </li>
-        <li><button class="btn btn-white">Accedi</button></li>
-        <li><button class="btn">Inizia</button></li>
+        <li><button class="btn btn-white">Sign in</button></li>
+        <li><button class="btn">Get Started</button></li>
       </ul>
     </nav>
   </header>
@@ -216,7 +216,25 @@
         </div>
       </div>
     </article>
-
+    <article class="two-column-article">
+      <div class="img-wrapper">
+          <img src="./img/profile.jpg" alt="user">
+      </div>
+      <div class="article-container">
+        <div class="article">
+          <h2>The synchronous challenges of distributed work</h2>
+          <p>Alastair Simpson, VP of Design at Dropbox, discusses the changing workplace and how businesses must adapt to a more human and flexible way of working.</p>
+          <button class="btn"><i class="fa-regular fa-circle-play"></i>Watch videos</button>
+        </div>
+        <img class="article-img" src="./img/profile.jpg" alt="user">
+      </div>
+    </article>
+    <div class="banner">
+      <p>Discover a better way to work together.</p>
+      <h1>Get started with Dropbox Business<i class="fa-solid fa-arrow-right"></i></h1>
+      <a href="#">Try free for 30 days</a>
+    </div>
+    
   </main>
 
   <!-- footer with referral links -->
