added play on jumbo img

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
         </div>
         <div class="column column-40">
           <img src="./img/jumbo-right.jpeg" alt="interview">
+          <i class="fa-regular fa-circle-play"></i>
           <div class="jumbo-right">
             <span>Work with Flexibility</span>
             <h2>New tools for a new way of working</h2>
@@ -234,7 +235,21 @@
       <h1>Get started with Dropbox Business<i class="fa-solid fa-arrow-right"></i></h1>
       <a href="#">Try free for 30 days</a>
     </div>
-    
+    <section class="remote-work">
+      <article class="two-column-article">
+        <div class="img-wrapper">
+            <img src="./img/profile.jpg" alt="user">
+        </div>
+        <div class="article-container">
+          <div class="article">
+            <h2>How to lead a team during a pandemic?</h2>
+            <p>Andy wilson, Director of Media, and Tifenn Dani Kwan, CMO, discuss the challenges businesses are currenly facing and how Dropbox is making a difference for its people and customers</p>
+            <button class="btn">Watch videos</button>
+          </div>
+        </div>
+      </article>
+    </section>
+
   </main>
 
   <!-- footer with referral links -->
