adjustment section remote-work

--- a/index.html
+++ b/index.html
@@ -242,8 +242,13 @@
         <div class="column-50">
           <img src="./img/profile.jpg" alt="">
         </div>
-        <div class="column-50">
-
+        <div class="column-50 text-column">
+          <div class="dida">
+            <span>Work with flexibility</span>
+            <h2>Solutions for remote work</h2>
+            <p>As businesses adjust to the new normal of distributed work, IT teams and managers face unprecedented challenges to enable staff to get their work done, wherever they are. Join us for a series of 20-miinute webinars that seek to address these challenges and offer for doing you best work, remotely.</p>
+          </div>
+          <button class="btn">Explore webinars</button>
         </div>
       </div>
     </section>
