--- a/index.html
+++ b/index.html
@@ -135,31 +135,39 @@
           <li>Resources</li>
         </ul>
       </nav>
-      <article class="jumbo-article">
-        <div class="column column-60">
-          <img src="./img/jumbo-left.jpg" alt="tired worker">
-          <div class="left-jumbo">
-            <h1>The future of work is Flexible</h1>
-            <p>Distributed teams, diverse time-zones, and new ways of collaboration are changing the way we work and
-              calling for a more flexible future.</p>
-          </div>
+        <div class="jumbo-wrapper">
+          <article class="jumbo-article">
+            <div class="column column-60">
+              <img src="./img/jumbo-left.jpg" alt="tired worker">
+            </div>
+            <div class="column column-40">
+              <div class="play">
+                <img src="./img/jumbo-right.jpeg" alt="interview">
+              <i class="fa-regular fa-circle-play"></i>
+              </div>
+              <div class="jumbo-right">
+                <span>Work with Flexibility</span>
+                <h2>New tools for a new way of working</h2>
+              </div>
+            </div>
         </div>
-        <div class="column column-40">
-          <div class="play">
-            <img src="./img/jumbo-right.jpeg" alt="interview">
-          <i class="fa-regular fa-circle-play"></i>
+        <div class="jumbo-wrapper">
+          <div class="column column-60">
+            <div class="left-jumbo">
+              <h1>The future of work is Flexible</h1>
+              <p>Distributed teams, diverse time-zones, and new ways of collaboration are changing the way we work and
+                calling for a more flexible future.</p>
+            </div>
           </div>
-          <div class="jumbo-right">
-            <span>Work with Flexibility</span>
-            <h2>New tools for a new way of working</h2>
-          </div>
-          <div class="jumbo-right">
-            <span>Work with Flexibility</span>
-            <h4>New tools for a new way of working</h4>
-          </div>
-          <div class="jumbo-right">
-            <span>Work with Flexibility</span>
-            <h4>New tools for a new way of working</h4>
+          <div class="column column-40">
+            <div class="jumbo-right second-row">
+              <span>Work with Flexibility</span>
+              <h4>New tools for a new way of working</h4>
+            </div>
+            <div class="jumbo-right second-row">
+              <span>Work with Flexibility</span>
+              <h4>New tools for a new way of working</h4>
+            </div>
           </div>
         </div>
       </article>
