writed footer item

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -269,57 +269,65 @@
       <div class="link-container">
         <ul>
           <li>Dropbox</li>
-          <li>Applicazione desktop</li>
-          <li>Perché Dropbox</li>
-          <li>Piani</li>
-          <li>Sicurezza</li>
-          <li>Funzioni</li>
+          <li>Desktop app</li>
+          <li>Mobile app</li>
+          <li>Integrations</li>
+          <li>Features</li>
+          <li>Solutions</li>
+          <li>Learning resources</li>
         </ul>
       </div>
       <div class="link-container">
         <ul>
-          <li>Prodotti</li>
-          <li>Applicazione desktop</li>
-          <li>Perché Dropbox</li>
-          <li>Piani</li>
-          <li>Sicurezza</li>
-          <li>Funzioni</li>
+          <li>Products</li>
+          <li>Plus</li>
+          <li>Professional</li>
+          <li>Business</li>
+          <li>Enterprise</li>
+          <li>Hellosign</li>
+          <li>Plans</li>
         </ul>
       </div>
       <div class="link-container">
         <ul>
-          <li>Azienda</li>
-          <li>Applicazione desktop</li>
-          <li>Perché Dropbox</li>
-          <li>Piani</li>
-          <li>Sicurezza</li>
-          <li>Funzioni</li>
-        </ul>
-      </div>
-      <div class="link-container">
-        <ul>
-          <li>Supporto</li>
-          <li>Applicazione desktop</li>
-          <li>Perché Dropbox</li>
-          <li>Piani</li>
-          <li>Sicurezza</li>
-          <li>Funzioni</li>
+          <li>Support</li>
+          <li>Help center</li>
+          <li>Contact us</li>
+          <li>Privacy & terms</li>
+          <li>Cookies</li>
+          <li>Sitemap</li>
         </ul>
       </div>
       <div class="link-container">
         <ul>
           <li>Community</li>
-          <li>Applicazione desktop</li>
-          <li>Perché Dropbox</li>
-          <li>Piani</li>
-          <li>Sicurezza</li>
-          <li>Funzioni</li>
+          <li>Blog</li>
+          <li>Developers</li>
+          <li>Forum</li>
+        </ul>
+      </div>
+      <div class="link-container">
+        <ul>
+          <li>Company</li>
+          <li>About us</li>
+          <li>Jobs</li>
+          <li>Investors relations</li>
+          <li>Social impact</li>
+          <li>Security</li>
+        </ul>
+      </div>
+      <div class="link-container">
+        <ul>
+          <li>Connect</li>
+          <li>Twitter</li>
+          <li>Facebook</li>
+          <li>Youtube</li>
         </ul>
       </div>
     </section>
     <div class="interline-3"></div>
     <div class="language links wider-container">
-      <i class="fa-solid fa-earth-africa"></i>Italiano<i class="fa-solid fa-caret-up"></i>
+      <i class="fa-solid fa-earth-africa"></i>English (United States)<i class="fa-solid fa-caret-up"></i>
     </div>
   </footer>
 </body>
