implemented latest article

--- a/index.html
+++ b/index.html
@@ -135,41 +135,41 @@
           <li>Resources</li>
         </ul>
       </nav>
-        <div class="jumbo-wrapper">
-          <article class="jumbo-article">
-            <div class="column column-60">
-              <img src="./img/jumbo-left.jpg" alt="tired worker">
-            </div>
-            <div class="column column-40">
-              <div class="play">
-                <img src="./img/jumbo-right.jpeg" alt="interview">
-              <i class="fa-regular fa-circle-play"></i>
-              </div>
-              <div class="jumbo-right">
-                <span>Work with Flexibility</span>
-                <h2>New tools for a new way of working</h2>
-              </div>
-            </div>
-        </div>
-        <div class="jumbo-wrapper">
+      <div class="jumbo-wrapper">
+        <article class="jumbo-article">
           <div class="column column-60">
-            <div class="left-jumbo">
-              <h1>The future of work is Flexible</h1>
-              <p>Distributed teams, diverse time-zones, and new ways of collaboration are changing the way we work and
-                calling for a more flexible future.</p>
-            </div>
+            <img src="./img/jumbo-left.jpg" alt="tired worker">
           </div>
           <div class="column column-40">
-            <div class="jumbo-right second-row">
-              <span>Work with Flexibility</span>
-              <h4>New tools for a new way of working</h4>
+            <div class="play">
+              <img src="./img/jumbo-right.jpeg" alt="interview">
+              <i class="fa-regular fa-circle-play"></i>
             </div>
-            <div class="jumbo-right second-row">
+            <div class="jumbo-right">
               <span>Work with Flexibility</span>
-              <h4>New tools for a new way of working</h4>
+              <h2>New tools for a new way of working</h2>
             </div>
           </div>
+      </div>
+      <div class="jumbo-wrapper">
+        <div class="column column-60">
+          <div class="left-jumbo">
+            <h1>The future of work is Flexible</h1>
+            <p>Distributed teams, diverse time-zones, and new ways of collaboration are changing the way we work and
+              calling for a more flexible future.</p>
+          </div>
         </div>
+        <div class="column column-40">
+          <div class="jumbo-right second-row">
+            <span>Work with Flexibility</span>
+            <h4>New tools for a new way of working</h4>
+          </div>
+          <div class="jumbo-right second-row">
+            <span>Work with Flexibility</span>
+            <h4>New tools for a new way of working</h4>
+          </div>
+        </div>
+      </div>
       </article>
     </section>
     <!-- article -->
@@ -202,12 +202,13 @@
     </article>
     <article class="two-column-article flex-reverse">
       <div class="img-wrapper">
-          <img src="./img/profile.jpg" alt="user">
+        <img src="./img/profile.jpg" alt="user">
       </div>
       <div class="article-container">
         <div class="article">
           <h2>How to lead a team during a pandemic?</h2>
-          <p>Andy wilson, Director of Media, and Tifenn Dani Kwan, CMO, discuss the challenges businesses are currenly facing and how Dropbox is making a difference for its people and customers</p>
+          <p>Andy wilson, Director of Media, and Tifenn Dani Kwan, CMO, discuss the challenges businesses are currenly
+            facing and how Dropbox is making a difference for its people and customers</p>
           <button class="btn">Watch videos</button>
         </div>
         <img class="article-img-reverse" src="./img/profile.jpg" alt="user">
@@ -229,12 +230,13 @@
     </article>
     <article class="two-column-article">
       <div class="img-wrapper">
-          <img src="./img/profile.jpg" alt="user">
+        <img src="./img/profile.jpg" alt="user">
       </div>
       <div class="article-container">
         <div class="article">
           <h2>The synchronous challenges of distributed work</h2>
-          <p>Alastair Simpson, VP of Design at Dropbox, discusses the changing workplace and how businesses must adapt to a more human and flexible way of working.</p>
+          <p>Alastair Simpson, VP of Design at Dropbox, discusses the changing workplace and how businesses must adapt
+            to a more human and flexible way of working.</p>
           <button class="btn"><i class="fa-regular fa-circle-play"></i>Watch videos</button>
         </div>
         <img class="article-img" src="./img/profile.jpg" alt="user">
@@ -251,16 +253,44 @@
           <img src="./img/profile.jpg" alt="">
         </div>
         <div class="column-50 text-column">
-          <div class="dida">
+          <div>
             <span>Work with flexibility</span>
             <h2>Solutions for remote work</h2>
-            <p>As businesses adjust to the new normal of distributed work, IT teams and managers face unprecedented challenges to enable staff to get their work done, wherever they are. Join us for a series of 20-miinute webinars that seek to address these challenges and offer for doing you best work, remotely.</p>
+            <p>As businesses adjust to the new normal of distributed work, IT teams and managers face unprecedented
+              challenges to enable staff to get their work done, wherever they are. Join us for a series of 20-miinute
+              webinars that seek to address these challenges and offer for doing you best work, remotely.</p>
           </div>
           <button class="btn">Explore webinars</button>
         </div>
       </div>
     </section>
-
+    <section class="vertical-wrapper">
+      <span>Teams on Dropbox</span>
+      <h1>Featured case studies</h1>
+      <span class="slide-direction"><i class="fa-solid fa-arrow-left"></i><i class="fa-solid fa-arrow-right"></i></span>
+      <div class="slider">
+        <div class="box-slide">
+          <img src="./img/profile.jpg" alt="pic">
+        </div>
+        <div class="box-slide caption">
+          <div>
+            <h5>Dentsu</h5>
+            <p>The global ad agency keeps creativity moving forward with help from Dropbox Business.</p>
+          </div>
+          <button class="btn">Read more</button>
+        </div>
+        <div class="box-slide">
+          <img src="./img/profile.jpg" alt="pic">
+        </div>
+        <div class="box-slide caption">
+          <div>
+            <h5>Moleskine</h5>
+            <p>Global retail brand unites geographically dispersed teams to improve innovation and speed up product design with Dropbox.</p>
+          </div>
+          <button class="btn">Read more</button>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- footer with referral links -->
